<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/select_your_games"
                android:textColor="@color/end"
                android:textSize="35dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/done_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/button_back_yellow"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline47" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/v_c_reading"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/checkBox2" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/ran"
                app:layout_constraintBottom_toTopOf="@+id/checkBox4"
                app:layout_constraintStart_toStartOf="@+id/guideline48"
                app:layout_constraintTop_toTopOf="@+id/guideline46" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_reading"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox4"
                app:layout_constraintStart_toStartOf="@+id/checkBox"
                app:layout_constraintTop_toTopOf="@+id/checkBox4" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/dictation"
                app:layout_constraintBottom_toTopOf="@+id/checkBox6"
                app:layout_constraintStart_toStartOf="@+id/guideline48"
                app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paragraph"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox6"
                app:layout_constraintStart_toStartOf="@+id/checkBox3"
                app:layout_constraintTop_toTopOf="@+id/checkBox6" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/spoonerism"
                app:layout_constraintBottom_toTopOf="@+id/checkBox8"
                app:layout_constraintStart_toStartOf="@+id/guideline48"
                app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneme_1"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox8"
                app:layout_constraintStart_toStartOf="@+id/checkBox5"
                app:layout_constraintTop_toTopOf="@+id/checkBox8" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/phoneme_2"
                app:layout_constraintBottom_toTopOf="@+id/checkBox10"
                app:layout_constraintStart_toStartOf="@+id/guideline48"
                app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneme_3"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox10"
                app:layout_constraintStart_toStartOf="@+id/checkBox7"
                app:layout_constraintTop_toBottomOf="@+id/checkBox8" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/phoneme_4"
                app:layout_constraintBottom_toTopOf="@+id/guideline47"
                app:layout_constraintStart_toStartOf="@+id/guideline48"
                app:layout_constraintTop_toBottomOf="@+id/checkBox8" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline46"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline47"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.7810219" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>