<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/you_did_it"
                android:textColor="@color/end"
                android:textSize="35dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="493dp"
                android:layout_height="186dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14"
                app:srcCompat="@drawable/lock_icon"
                tools:ignore="VectorDrawableCompat" />

            <Button
                android:id="@+id/done_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_back_yellow"
                android:foregroundGravity="center|center_horizontal"
                android:gravity="center|center_horizontal"
                android:shadowColor="#151515"
                android:shadowDx="5"
                android:shadowDy="15"
                android:shadowRadius="20"
                android:text="@string/unlock_next"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView14"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:gravity="center|center_horizontal|fill_horizontal"
                android:shadowDx="50"
                android:shadowDy="50"
                android:shadowRadius="40"
                android:text="@string/unlocking"
                android:textColor="@color/Light_Green"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/done_btn"
                app:layout_constraintEnd_toEndOf="@+id/done_btn"
                app:layout_constraintHorizontal_bias="0.464"
                app:layout_constraintStart_toStartOf="@+id/done_btn"
                app:layout_constraintTop_toTopOf="@+id/done_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>